--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "dev:client": "vite dev --port 5000",
     "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev:miniapp": "npm run dev --workspace apps/miniapp",
     "build": "tsx script/build.ts",
+    "build:miniapp": "npm run build --workspace apps/miniapp",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
+  "workspaces": [
+    "apps/miniapp"
+  ],
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
