--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,12 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/[...path].ts": {
+    "api/index.ts": {
       "runtime": "nodejs20.x"
     }
   },
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1" },
+    { "src": "^/api/(.*)$", "dest": "/api/index?path=$1" },
     { "handle": "filesystem" },
     { "src": "^(.*)$", "dest": "/index.html" }
   ]
